--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,7 @@ dependencies:
 - transformers >= 0.2   && < 0.6
 - free >= 5 && < 6
 - mtl >= 2.2.2
+- process >= 1.6.7
 
 library:
   source-dirs: src
