- project structure refactor - add tests for Calculator - add Python to C interpreter (gramma + impl)

--- a/package.yaml
+++ b/package.yaml
@@ -28,6 +28,7 @@ dependencies:
 - regex-tdfa
 - lens
 - split
+- containers
 
 library:
   source-dirs: src
@@ -56,3 +57,4 @@ tests:
     - HUnit
     - split
     - QuickCheck
+    - hspec
